# cmc-15-ia

./: .gitignore  README.md
lab1/: README.md  pyproject.toml
lab1/src/: projeto_buscas.ipynb
lab1/src/path_finding/: PathFinding.ipynb
lab1/src/sudoku/: SudokuBoard.ipynb
lab2/: pyproject.toml
lab2/data/FCTH/: test.csv  train.csv
lab2/data/Haralick/: test.csv  train.csv
lab2/data/Moments/: test.csv  train.csv
lab2/data/OpponentHistogram/: test.csv  train.csv
lab2/data/Tamura/: test.csv  train.csv
lab2/data/kaggle_results/: dtree_fcth.csv  dtree_hara.csv  dtree_mome.csv  dtree_ohist.csv  dtree_tamu.csv  fcth.csv  hara.csv  knn_mome.csv  knn_tamu.csv  ohist.csv
lab2/src/: projeto1_am.ipynb
lab3/: pyproject.toml
lab3/src/: projeto2_am.ipynb
lab4/: pyproject.toml
lab4/src/lab4/: test.py
lab5/: .gitignore  pyproject.toml
lab5/src/lab5/: lab.py  log.py  logger.py  main.py  rbf.py  regularization.py  tasks.py
