[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Samir Nunes da Silva <samir.silva12342@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
