[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["Samir Nunes da Silva <samir.silva12342@gmail.com>"]
readme = "README.md"
packages = [{include="lab5", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
